Trying to fix user photo display being blocked (403): https://stackoverflow.com/questions/40570117/http403-forbidden-error-when-trying-to-load-img-src-with-google-profile-pic

--- a/src/pages/LogIn/OAuth/Animation/styles.scss
+++ b/src/pages/LogIn/OAuth/Animation/styles.scss
@@ -25,7 +25,7 @@ $pathLength: $distance - $photoSize;
   }
 
   .providerBox {
-    background: #fff;
+    background: $oauth-animation-provider-bg-color;
     border: none;
   }
 
@@ -65,6 +65,10 @@ $pathLength: $distance - $photoSize;
       height: $photoSize;
       background-color: $oauth-animation-user-bg-color;
       background-size: contain;
+
+      .userPhoto {
+        object-fit: contain;
+      }
     }
   }
 }
